[package]
name = "zipkin-json"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[features]
default =["future"]
future = ["tokio-io", "bytes"]

[dependencies]
error-chain = "0.10"
serde_json = "0.9"
base64 = "0.4"

tokio-io = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }

zipkin = { path = "../zipkin" }

[dev-dependencies]
chrono = "0.3"
diff = "0.1"