[package]
name = "zipkin-thrift"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[dependencies]
error-chain = "0.10"
byteorder = "1.0"
ordered-float = "0.4"
try_from = "0.2"

[dependencies.thrift]
path = "thrift/lib/rs"

[dependencies.zipkin]
path = "../zipkin"

[dev-dependencies]
chrono = "0.3"