[package]
name = "zipkin-thrift"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[features]
default =["future"]
future = ["tokio-io", "bytes"]

[dependencies]
error-chain = "0.10"
byteorder = "1.0"
ordered-float = "0.4"
try_from = "0.2"

tokio-io = { version = "0.1", optional = true }
bytes = { version = "0.4", optional = true }

thrift = { path = "thrift/lib/rs" }
zipkin = { path = "../zipkin" }

[dev-dependencies]
chrono = "0.3"