[package]
name = "zipkin-thrift"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]

[dependencies]
error-chain = "0.10"
byteorder = "1.0"
ordered-float = "0.4"
try_from = "0.2"
bytes = "0.4"
mime = "0.2"

thrift = { path = "thrift/lib/rs" }

zipkin-core = { path = "../zipkin-core" }

[dev-dependencies]
